Small change to TestingUtils - change .toList() as the terminal stream operation to .collect(Collectors.toList()). (merge main -> ce/main @ 104602)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 104607]